bugfix for avatar being behind rocket icon

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -135,6 +135,7 @@ a {
     background-image: linear-gradient(45deg, rgba(184, 167, 17, 0.281), rgba(255, 255, 255, 0.192));
 	background-size: 400% 400%;
     animation: gradientBG 15s ease infinite;
+    z-index: 1;
 }
 .avatar_icon {
     display: flex;
